# salesforce_postgres_pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
